Fix shape divider spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ ul {
 /* Header Shape Divider */
 .custom-shape-divider-top-1736456262 {
     position: absolute;
-    top: 35px;
+    top: 40px;
     left: 0;
     width: 100%;
     overflow: hidden;
@@ -40,7 +40,7 @@ ul {
 /* Footer Shape Divider */
 .custom-shape-divider-bottom-1736456491 {
     position: absolute;
-    bottom: 85px;
+    bottom: 110px;
     left: 0;
     width: 100%;
     overflow: hidden;
